apps/nginx-proxy/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: nginx-fileserver-tls
      hosts:
        - filestore-dash.picturo.us
    - secretName: nginx-homeassistant-tls
      hosts:
        - smarthome.picturo.us
    - secretName: nginx-upsmon-tls
      hosts:
        - ups.picturo.us
  rules:
    - host: filestore-dash.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
    - host: smarthome.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8081
    - host: ups.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8082
